# PrettyGoodSocial

./: .gitignore  flake.nix
backend/: api.py  auth.py  database.py  main.py  register.py  ui.py
html/: index.html  post.html
js/: package-lock.json  package.json
js/src/: index.ts  post.ts  register.ts
smartkey-fw/: Cargo.toml  build.rs
smartkey-fw/src/: main.rs  public.der  signing.der
