[package]
name = "smartkey-fw"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "smartkey-fw"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
embedded-hal = "0.2.3"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
features = ["arduino-uno"]

[build-dependencies]
cc = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true